--- a/moodle.html
+++ b/moodle.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Moodle Sync by KamalGalrani</title>
-	<meta name="keywords" content="Moodle, Offline, Sync">
-	<meta name="description" content="Synchronise course content and forum posts from moodle.">
+    <meta name="keywords" content="Moodle, Offline, Sync">
+    <meta name="description" content="Synchronise course content and forum posts from moodle.">
 	
-	<meta property="og:title" content="Moodle Sync">
-	<meta property="og:type" content="article">
-	<meta property="og:url" content="http://kamalgalrani.github.io/Moodle-Sync-Windows">
-	<meta property="og:site_name" content="Moodle Sync">
-	<meta property="og:description" content="Synchronise course content and forum posts from moodle.">
+    <meta property="og:title" content="Moodle Sync">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="http://kamalgalrani.github.io/Moodle-Sync-Windows">
+    <meta property="og:site_name" content="Moodle Sync">
+    <meta property="og:description" content="Synchronise course content and forum posts from moodle.">
 	
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -30,43 +30,19 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a name="what-is" class="anchor" href="#what-is"><span class="octicon octicon-link"></span></a>What is it?</h3>
+        <h3><a name="what-is" class="anchor" href="#what-is"><span class="octicon octicon-link"></span></a>What is it?</h3>
 
-<p>Moodle Sync is a free windows software released under <a href="http://gplv3.fsf.org/" target="_blank">GPL v3</a>. &nbsp;It automatically downloads course content and forum posts for&nbsp;registered courses from <a href="http://moodle.iitb.ac.in" target="_blank">IIT Bombay Moodle Site</a>&nbsp;at regular intervals and shows notifications for new materials/posts.</p>
-<p>Though it is being developed for IIT Bombay, it may also work on other similar moodle sites.</p>
+        <p>Moodle Sync is a free windows software released under <a href="http://gplv3.fsf.org/" target="_blank">GPL v3</a>. 
+        It automatically downloads course content and forum posts for registered courses from 
+        <a href="http://moodle.iitb.ac.in" target="_blank">IIT Bombay Moodle Site</a> at regular intervals and 
+        shows notifications for new contents/posts.</p>
+        <p>Though it is being developed for IIT Bombay, it may also work on other similar moodle sites.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+        <h3><a name="how-to" class="anchor" href="#how-to"><span class="octicon octicon-link"></span></a>How to install?</h3>
+        <p>Make sure that you have .NET Framework 4.5 or later installed. You may download it from <a class="anchor" href="http://www.microsoft.com/en-in/download/details.aspx?id=40779">here</a> (or <a class="anchor" href="#">here</a>). 
+        It is preinstalled in Windows 8 and later.</p>
+        <p>Download and run setup.exe stored in the main directory.</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="how-to" class="anchor" href="#how-to"><span class="octicon octicon-link"></span></a>How to install?</h3>
-<!--
-<ul>
-	<li><span style="font-weight:bold;">Automated&nbsp;Install</span></li>
-</ul>
--->
-<ol> <!--style="margin-left: 40px;"-->
-	<li>Download the appropriate zip and extract it.</li>
-	<li>Run setup.exe. If there is an error try&nbsp;manual install.</li>
-	<li>Setup Moodle Sync.</li>
-</ol>
-<!--
-<ul>
-	<li><span style="font-weight:bold;">Manual Install</span></li>
-</ul>
-
-<ol style="margin-left: 40px;">
-	<li>If you are not running Windows 8/8.1, install .NET 4.5 by running dotnetfx45_full_x86_x64.exe (stored in a subdirectory of ISSetupPrerequisites).</li>
-	<li>Copy "Application Data\Moodle Sync"&nbsp;to a safe&nbsp;place on your PC.</li>
-	<li>Make shortcut&nbsp;to MoodleSyncInterface.exe at a suitable place.</li>
-	<li>After setting up&nbsp;the application a file named Caalback.log will be created in "%USERPROFILE%\AppData\Moodle Sync". Make a shortcut to that file too.</li>
-</ol>
--->
 <p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
 
 <h3>
