--- a/moodle.html
+++ b/moodle.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Moodle Sync by KamalGalrani</title>
-    <meta name="keywords" content="Moodle, Offline, Sync">
-    <meta name="description" content="Synchronise course content and forum posts from moodle.">
+    <title>Moodle Sync for Windows</title>
+    <meta name="keywords" content="Moodle, Offline, Sync, Windows">
+    <meta name="description" content="Synchronises course content and forum posts from IIT Bombay Moodle Site.">
 	
-    <meta property="og:title" content="Moodle Sync">
-    <meta property="og:type" content="article">
+    <meta property="og:title" content="Moodle Sync for Windows">
+    <meta property="og:type" content="website">
     <meta property="og:url" content="http://kamalgalrani.github.io/Moodle-Sync-Windows">
     <meta property="og:site_name" content="Moodle Sync">
-    <meta property="og:description" content="Synchronise course content and forum posts from moodle.">
+    <meta property="og:description" content="Synchronises course content and forum posts from moodle.">
 	
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -30,7 +30,7 @@
         </ul>
       </header>
       <section>
-        <h3><a name="what-is" class="anchor" href="#what-is"><span class="octicon octicon-link"></span></a>What is it?</h3>
+        <h3><a name="about" class="anchor" href="#about"><span class="octicon octicon-link"></span></a>Moodle Sync for Windows.</h3>
 
         <p>Moodle Sync is a free windows software released under <a href="http://gplv3.fsf.org/" target="_blank">GPL v3</a>. 
         It automatically downloads course content and forum posts for registered courses from 
@@ -38,17 +38,13 @@
         shows notifications for new contents/posts.</p>
         <p>Though it is being developed for IIT Bombay, it may also work on other similar moodle sites.</p>
 
-        <h3><a name="how-to" class="anchor" href="#how-to"><span class="octicon octicon-link"></span></a>How to install?</h3>
+        <h3><a name="announcements" class="anchor" href="#announcements"><span class="octicon octicon-link"></span></a>Announcements.</h3>
+        <p>No announcements for now.</p>
+        
+        <h3><a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h3>
         <p>Make sure that you have .NET Framework 4.5 or later installed. You may download it from <a class="anchor" href="http://www.microsoft.com/en-in/download/details.aspx?id=40779">here</a> (or <a class="anchor" href="#">here</a>). 
-        It is preinstalled in Windows 8 and later.</p>
-        <p>Download and run setup.exe stored in the main directory.</p>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+        It is preinstalled in Windows 8 and later.<br>
+        Download and run setup.exe stored in the main directory.</p>
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
