--- a/moodle.html
+++ b/moodle.html
@@ -28,26 +28,25 @@
           <li><a href="https://github.com/KamalGalrani/Moodle-Sync-Windows/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/KamalGalrani/Moodle-Sync-Windows">View On <strong>GitHub</strong></a></li>
         </ul>
+        <p class="view"><a href="https://github.com/KamalGalrani/Moodle-Sync-Windows"><small>old versions</small></a></p>
+        
       </header>
       <section>
-        <h3><a name="about" class="anchor" href="#about"><span class="octicon octicon-link"></span></a>Moodle Sync for Windows.</h3>
+        <h3 style="margin-top:0;"><a name="about" class="anchor" href="#about"><span class="octicon octicon-link"></span></a>Moodle Sync for Windows</h3>
 
-        <p>Moodle Sync is a free windows software released under <a href="http://gplv3.fsf.org/" target="_blank">GPL v3</a>. 
-        It automatically downloads course content and forum posts for registered courses from 
-        <a href="http://moodle.iitb.ac.in" target="_blank">IIT Bombay Moodle Site</a> at regular intervals and 
-        shows notifications for new contents/posts.</p>
+        <p>Moodle Sync is a free windows software released under <a href="http://gplv3.fsf.org/" target="_blank">GPL v3</a>. It automatically downloads course content and forum posts for registered courses from <a href="http://moodle.iitb.ac.in" target="_blank">IIT Bombay Moodle Site</a> at regular intervals and shows notifications for new contents/posts.</p>
         <p>Though it is being developed for IIT Bombay, it may also work on other similar moodle sites.</p>
 
-        <h3><a name="announcements" class="anchor" href="#announcements"><span class="octicon octicon-link"></span></a>Announcements.</h3>
+        <h3><a name="announcements" class="anchor" href="#announcements"><span class="octicon octicon-link"></span></a>Announcements</h3>
         <p>No announcements for now.</p>
         
-        <h3><a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation.</h3>
-        <p>Download and run setup.exe stored in the main directory.</p>
-        <p>Make sure that you have .NET Framework 4.5 or later installed. You may download it from <a class="anchor" href="http://www.microsoft.com/en-in/download/details.aspx?id=40779">here</a> (or <a class="anchor" href="#">here</a>). It is preinstalled in Windows 8 and later.</p>
+        <h3><a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h3>
+        <p>Download and run <a href="#" target="_blank">setup.exe</a> stored in the main directory.</p>
+        <p>Make sure that you have .NET Framework 4.5 or later installed. You may download it from <a href="http://www.microsoft.com/en-in/download/details.aspx?id=40779" target="_blank">here</a> (or <a href="#" target="_blank">here</a>). It is preinstalled in Windows 8 and later.</p>
 
         <h3><a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-        <p>Having trouble with Moodle Sync? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+        <p>Having trouble with Moodle Sync? Check out the documentation at <a href="https://github.com/KamalGalrani/Moodle-Sync-Windows/wiki">https://github.com/KamalGalrani/Moodle-Sync-Windows/wiki</a> or contact <a href="mailto:kamalgalrani@gmail.com">kamalgalrani@gmail.com</a> and I’ll help you sort it out.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/KamalGalrani">KamalGalrani</a></p>
