--- a/moodle.html
+++ b/moodle.html
@@ -22,13 +22,14 @@
       <header>
         <h1>Moodle Sync</h1>
         <p>Downloads course content and forum posts from [IIT Bombay] moodle site and notifies user on changes.</p>
-
+        <p>&nbsp;</p>
         <ul>
           <li><a href="https://github.com/KamalGalrani/Moodle-Sync-Windows/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/KamalGalrani/Moodle-Sync-Windows/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/KamalGalrani/Moodle-Sync-Windows">View On <strong>GitHub</strong></a></li>
         </ul>
-        <p class="view"><a href="https://github.com/KamalGalrani/Moodle-Sync-Windows"><small>old versions</small></a></p>
+        <p class="view">Version 2.0</p>
+        <p class="view"><a href="https://github.com/KamalGalrani/Moodle-Sync-Windows"><small>earlier versions</small></a></p>
         
       </header>
       <section>
