--- a/moodle.html
+++ b/moodle.html
@@ -23,9 +23,9 @@
         <h1>Moodle Sync</h1>
         <p>Downloads course content and forum posts from [IIT Bombay] moodle site and notifies user on changes.</p>
         <p>&nbsp;</p>
-        <ul>
-          <li><a href="https://github.com/KamalGalrani/Moodle-Sync-Windows/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/KamalGalrani/Moodle-Sync-Windows/tarball/master">Download <strong>TAR Ball</strong></a></li>
+        <ul style="margin-bottom: 3px">
+          <li><a href="https://github.com/KamalGalrani/Moodle-Sync-Windows/zipball/v2.0">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/KamalGalrani/Moodle-Sync-Windows/tarball/v2.0">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/KamalGalrani/Moodle-Sync-Windows">View On <strong>GitHub</strong></a></li>
         </ul>
         <p class="view">Version 2.0</p>
@@ -42,15 +42,15 @@
         <p>No announcements for now.</p>
         
         <h3><a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h3>
-        <p>Download and run <a href="#" target="_blank">setup.exe</a> stored in the main directory.</p>
-        <p>Make sure that you have .NET Framework 4.5 or later installed. You may download it from <a href="http://www.microsoft.com/en-in/download/details.aspx?id=40779" target="_blank">here</a> (or <a href="#" target="_blank">here</a>). It is preinstalled in Windows 8 and later.</p>
+        <p>Download and run <a href="https://raw.github.com/KamalGalrani/Moodle-Sync-Windows/v2.0/setup.exe" target="_blank">setup.exe</a> stored in the main directory.</p>
+        <p>Make sure that you have .NET Framework 4.5 or later installed. You may download it from <a href="http://www.microsoft.com/en-in/download/details.aspx?id=30653">here</a> (or <a href="resources/dotnetfx45_full_x86_x64.exe" target="_blank">here</a>). It is preinstalled in Windows 8 and later.</p>
 
         <h3><a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
         <p>Having trouble with Moodle Sync? Check out the documentation at <a href="https://github.com/KamalGalrani/Moodle-Sync-Windows/wiki">https://github.com/KamalGalrani/Moodle-Sync-Windows/wiki</a> or contact <a href="mailto:kamalgalrani@gmail.com">kamalgalrani@gmail.com</a> and I’ll help you sort it out.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/KamalGalrani">KamalGalrani</a></p>
+        <p>This project is maintained by <a href="https://github.com/KamalGalrani">Kamal Galrani</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
