--- a/moodle.html
+++ b/moodle.html
@@ -28,7 +28,7 @@
           <li><a href="https://github.com/KamalGalrani/Moodle-Sync-Windows/tarball/v2.0">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/KamalGalrani/Moodle-Sync-Windows">View On <strong>GitHub</strong></a></li>
         </ul>
-        <p class="view">Version 2.0</p>
+        <p class="view">Version 1.0</p>
         <p class="view"><a href="https://github.com/KamalGalrani/Moodle-Sync-Windows"><small>earlier versions</small></a></p>
         
       </header>
@@ -43,7 +43,7 @@
         
         <h3><a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h3>
         <p>Download and run <a href="https://raw.github.com/KamalGalrani/Moodle-Sync-Windows/v2.0/setup.exe" target="_blank">setup.exe</a> stored in the main directory.</p>
-        <p>Make sure that you have .NET Framework 4.5 or later installed. You may download it from <a href="http://www.microsoft.com/en-in/download/details.aspx?id=30653">here</a> (or <a href="resources/dotnetfx45_full_x86_x64.exe" target="_blank">here</a>). It is preinstalled in Windows 8 and later.</p>
+        <p>Make sure that you have .NET Framework 4.5 or later installed. You may download it from <a href="http://www.microsoft.com/en-in/download/details.aspx?id=30653">here</a> (or <a href="http://home.iitb.ac.in/~kamalgalrani/resources/dotnetfx45_full_x86_x64.exe" target="_blank">here</a>). It is preinstalled in Windows 8 and later.</p>
 
         <h3><a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
